style: 전체적으로 사용할 전역 style 추가

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,6 +15,10 @@ body {
   border-width: 1px;
 }
 
+input[type='text']:focus + label.inputLabel {
+  color: red;
+}
+
 .position-center {
   position: absolute;
   z-index: 1000;
